# backend/src/main/java/com/suken27/humanfactorsjava/model/QuestionFrequency.java
@@ -1,0 +1,4 @@
+package com.suken27.humanfactorsjava.model;
+
+
+public enum QuestionFrequency { DAILY, WEEKLY, MONTHLY }
